--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -182,6 +182,50 @@ span[id^="article"] {
   padding: 90px 0;
 }
 
+.no-left-pad {
+  padding-left: 0 !important;
+}
+
+.no-right-pad {
+  padding-right: 0 !important;
+}
+
+.calendar-block {
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
+  height: 100px;
+  border: 1px solid black;
+}
+
+.calendar-date {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  color: black;
+  font-size: 50px;
+  font-weight: bold;
+  height: 75px;
+  line-height: 75px;
+}
+
+.calendar-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  font-weight: 600;
+  height: 25px;
+  line-height: 25px;
+}
+
+.meeting-desc {
+  margin-top: 20px;
+}
+
 /*=====================
 astute HEADING TOP AREA CSS
 =========================*/
