--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -75,7 +75,6 @@ button {
   background-color: #2033AB !important;
   letter-spacing: 1px !important;
   font-family: 'Montserrat', sans-serif !important;
-  text-transform: uppercase !important;
   font-weight: 600 !important;
 }
 
@@ -224,6 +223,11 @@ span[id^="article"] {
 
 .meeting-desc {
   margin-top: 20px;
+}
+
+.file-text {
+  color: #9D9D9D;
+  font-size: 13px;
 }
 
 /*=====================
