--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1804,6 +1804,9 @@ astute HEADING NAV AREA CSS
     background-color: rgb(0,0,0,0);
     color: white;
 }
+.navbar {
+  padding: 5px 0 !important;
+}
 .nav_white {
     background-color: white;
     color: black;
@@ -1841,7 +1844,6 @@ astute HEADING NAV AREA CSS
 }
 .astute_menu > ul > li > a {
     display: block;
-    margin: 10% 40px 10% 40px;
     -webkit-transition: .1s;
     transition: .1s;
     position: relative;
@@ -1850,6 +1852,12 @@ astute HEADING NAV AREA CSS
     font-weight: 600;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
+}
+#large-nav .astute_menu > ul > li > a {
+    margin: 5% 40px 5% 40px;
+}
+#small-nav .astute_menu > ul > li > a {
+    margin: 10% 40px 10% 40px;
 }
 .astute_menu > ul > li > a::before, .astute_menu > ul > li.current > a::before {
   background: #ffb600 none repeat scroll 0 0;
@@ -1878,7 +1886,7 @@ astute HEADING NAV AREA CSS
 .heading_style_5 .astute_menu > ul > li > a {
     color: #fff;
 }
-.astute_menu ul li:last-child a {
+.astute_menu ul li:last-child a, #large-nav .astute_menu ul li:last-child a {
     margin-right: 0px;
 }
 .astute_menu > ul > li.current > a,
@@ -1947,7 +1955,22 @@ astute HEADING NAV AREA CSS
 /* LOGO LEFT RIGHT CSS */
 
 .default-logo {
-  width: 110px;
+  width: 150px;
+}
+
+.brand {
+  font-size: 15px;
+  color: #333;
+  text-transform: uppercase;
+  font-weight: 400;
+  height: 30px;
+  line-height: 30px;
+}
+
+.short-brand {
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .smaller-logo {
@@ -2128,14 +2151,14 @@ nav.astute_menu.main-search-menu {
 a.dtbtn, a.red-on-white {
     border: none;
     display: block;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
     background-color: #B51D29;
     border: 1px solid #B51D29;
     border-radius: 50px;
     color: #fff;
-    padding: 10px 30px;
+    padding: 5px 15px;
     font-family: 'Montserrat', sans-serif;
     transition: 1s;
 }
@@ -5379,9 +5402,6 @@ astute adn blog css
     .mean-container a.meanmenu-reveal {
         padding: 19px 20px 18px;
     }
-}
-.navbar {
-  padding: 0 !important;
 }
 .navbar-toggler {
   border: 1px solid white !important;
