Add new committees page

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -3646,7 +3646,7 @@ EM40 TEAM CSS
   background-color: #fff;
   bottom: -20px;
   left: 0;
-  margin: 0 9.5%;
+  margin: 0 9%;
   padding: 30px 0;
   position: absolute;
   right: 0;
@@ -3709,6 +3709,7 @@ EM40 TEAM CSS
 .em-content-subtitle {
   font-size: 14px;
   margin: 5px 0 0;
+  height: 30px;
   text-transform: uppercase;
     transition:.5s;
 
