--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -6224,14 +6224,15 @@ astute event AREA CSS
     text-transform: uppercase;
 }
 .event-page-title_adn a {
-    color: #333;
+    color: #007bff;
     text-transform: capitalize;
     font-weight: 600;
 }
 .event-page-title_adn h2 {
     margin-bottom: 6px;
-    height: 8vh;
-    font-size: 1.7em;
+    height: 25px;
+    line-height: 25px;
+    font-size: 17px;
 }
 @media screen and (max-width: 700px) {
   .event-page-title_adn h2 {
@@ -6800,6 +6801,21 @@ table#wp-calendar td#today{
   .theme-container {
     padding-left: 7%;
   }
+  .event_area {
+    padding: 50px 0;
+  }
+}
+
+@media (max-height: 800px) {
+  .logo img {
+    width: 80px;
+  }
+  .banner-container {
+    padding-top: 80px !important;
+  }
+  .main-slider-area {
+    padding-top: 0 !important;
+  }
 }
 
 @media (max-width: 800px) {
@@ -6827,7 +6843,7 @@ table#wp-calendar td#today{
     padding: 10px 15px;
   }
   .logo img {
-    width: 80px;
+    width: 70px;
   }
   .carousel-control .fa {
     font-size: 20px;
@@ -6892,9 +6908,6 @@ table#wp-calendar td#today{
     font-size: 1em;
     height: 4vh;
   }
-  .astute-event-meta-right_adn {
-    float: left;
-  }
   .souvenir-thumb {
     height: 275px;
     width: 200px;
@@ -6918,7 +6931,7 @@ table#wp-calendar td#today{
     padding: 0 !important;
   }
   .banner-text {
-    padding: 130px 0;
+    padding: 120px 0;
   }
 }
 
@@ -6969,6 +6982,24 @@ table#wp-calendar td#today{
   .camp-meeting-area .em_slider_inner {
     margin-top: 30px !important;
   }
+  .logo img {
+    width: 60px;
+  }
+  .main-slider-area {
+    padding: 0 !important;
+  }
+  .banner-container {
+    padding-top: 60px !important;
+  }
+  .event-page-title_adn h2 {
+    height: 30px;
+  }
+  .banner-text {
+    padding: 40px 0;
+  }
+  .banner_area {
+    height: 100px !important;
+  }
 }
 
 @media (min-width: 800px) and (max-height: 500px) {
@@ -6993,6 +7024,9 @@ table#wp-calendar td#today{
   .count_down_area .container {
     padding-left: 10px !important;
     padding-right: 10px !important;
+  }
+  .logo img {
+    width: 60px;
   }
 }
 
