Add loader for map panels

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -234,6 +234,10 @@ span[id^="article"] {
   font-size: 13px;
 }
 
+.map-loader {
+  text-align: center;
+}
+
 /*=====================
 astute HEADING TOP AREA CSS
 =========================*/
